2005-01-08  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (setExpander): Remove unused field.
	* kawa/standard/define_syntax.java (setExpanderMethod): Likewise.

	* kawa/standard/define_syntax.java (makeHygienic, makeNonHygienic):
	New Procedure fields replace makeMethod, makeNonHygienicMethod.
	(scanForm): New new fields.

	* kawa/standard/define_syntax.java (scanForm): Use new ThisExp
	factory method makeGivingContext so we can eval this ApplyExp
	in the current Compilation.  This fixes Savannah bug #11508.

	* kawa/standard/require.java (importDefinitions): If immediate
	note the instance value as a constant.  Don't compile a dofind call.

2005-01-07  Per Bothner  <per@bothner.com>

	* Makefile.am (patch-source-list): Filter with sed out initial "./".
	(select-java1, select-java2, select-java5): Use new PreProcess class.

	* build.xml: Add support for #ifndef JAVA5.

	* kawa/lang/Macro.java: Remove unneeded imports.
	* kawa/lang/CompileFile.java: Likewise.
	* kawa/lang/SyntaxTemplate.java: Likewise.
	* kawa/lang/Translator.java: Likewise.
	* kawa/standard/syntax_case.java: Likewise.
	* kawa/lang/Lambda.java: Reference static method using class name,
	to avoid ecj warning.
	* kawa/lang/Quote.java: Likewise.

2005-01-03  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (translate): Pass correct SyntaxForm.
	(literalIdentifierEq): Finish implementation.

	* kawa/lang/SyntaxRules.java (expand): Recover robustly if there
	was an error defining the macro.

	* kawa/lang/Translator.java (makeAlias, makeRenamedAlias): Some
	code moving to reduce duplication..

2005-01-02  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVATOP): Remove unused macro.

	* Makefile.am: Update "select" rules to use new "preprocessor" syntax.
	* build.xml: Likewise.

	* kawa/lang/Quote.java, kawa/lang/SyntaxTemplate.java,
	kawa/standard/syntax.java: Change "select" (preprocessor) syntax.

2004-12-29  Per Bothner  <per@bothner.com>
